--- a/Farmdrop Test/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Farmdrop Test/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vyf-Ct-IdF">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="eSG-Kn-JbU">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="vyf-Ct-IdF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Z9b-Bn-FfZ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="V4w-7V-UgI" kind="relationship" relationship="rootViewController" id="IPc-2a-w6n"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r6m-TE-MD8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-640" y="81"/>
+        </scene>
+        <!--Top Movies-->
+        <scene sceneID="TTi-19-Izc">
+            <objects>
+                <viewController id="V4w-7V-UgI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s3g-1w-VR0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KX1-1Y-Ruz">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="337" id="IlV-rM-JOC">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="337"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IlV-rM-JOC" id="bqt-Wz-4ed">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="337"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ltz-b4-84J">
+                                                    <rect key="frame" x="16" y="16" width="100" height="142.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="vQ0-YO-Zvv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Shawshank Redemption" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKM-D7-VOG">
+                                                    <rect key="frame" x="132" y="24" width="266" height="67.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEQ-n9-4fG">
+                                                    <rect key="frame" x="16" y="174.5" width="382" height="130.5"/>
+                                                    <string key="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate</string>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="YEQ-n9-4fG" firstAttribute="top" secondItem="Ltz-b4-84J" secondAttribute="bottom" constant="16" id="0Rd-gP-MIV"/>
+                                                <constraint firstItem="Ltz-b4-84J" firstAttribute="top" secondItem="bqt-Wz-4ed" secondAttribute="top" constant="16" id="5z9-xp-M3D"/>
+                                                <constraint firstItem="YEQ-n9-4fG" firstAttribute="leading" secondItem="Ltz-b4-84J" secondAttribute="leading" id="77f-xX-YXi"/>
+                                                <constraint firstItem="KKM-D7-VOG" firstAttribute="top" secondItem="Ltz-b4-84J" secondAttribute="top" constant="8" id="Rga-n0-MdG"/>
+                                                <constraint firstItem="Ltz-b4-84J" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="KKM-D7-VOG" secondAttribute="bottom" constant="8" id="TZK-bK-LYH"/>
+                                                <constraint firstItem="Ltz-b4-84J" firstAttribute="leading" secondItem="bqt-Wz-4ed" secondAttribute="leading" constant="16" id="X2O-hW-Owa"/>
+                                                <constraint firstItem="YEQ-n9-4fG" firstAttribute="trailing" secondItem="KKM-D7-VOG" secondAttribute="trailing" id="ZC7-Zp-Iwf"/>
+                                                <constraint firstAttribute="trailing" secondItem="KKM-D7-VOG" secondAttribute="trailing" constant="16" id="Zk8-ux-hZc"/>
+                                                <constraint firstItem="KKM-D7-VOG" firstAttribute="leading" secondItem="Ltz-b4-84J" secondAttribute="trailing" constant="16" id="h5P-x4-5Hs"/>
+                                                <constraint firstAttribute="bottom" secondItem="YEQ-n9-4fG" secondAttribute="bottom" constant="32" id="jUg-2Z-ZF1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="KX1-1Y-Ruz" secondAttribute="bottom" id="Azi-0P-12c"/>
+                            <constraint firstItem="KX1-1Y-Ruz" firstAttribute="top" secondItem="VJy-Im-Zhm" secondAttribute="top" id="I2y-vC-yxw"/>
+                            <constraint firstItem="VJy-Im-Zhm" firstAttribute="trailing" secondItem="KX1-1Y-Ruz" secondAttribute="trailing" id="IOS-BD-hUc"/>
+                            <constraint firstItem="KX1-1Y-Ruz" firstAttribute="leading" secondItem="VJy-Im-Zhm" secondAttribute="leading" id="SDb-tI-KxZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VJy-Im-Zhm"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Top Movies" id="nVN-LI-0Pj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mBJ-TB-F2x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="208.69565217391306" y="79.6875"/>
         </scene>
     </scenes>
 </document>
