--- a/Farmdrop Test/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Farmdrop Test/Views/Storyboards/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
         <!--Top Movies-->
         <scene sceneID="TTi-19-Izc">
             <objects>
-                <viewController id="V4w-7V-UgI" sceneMemberID="viewController">
+                <viewController id="V4w-7V-UgI" customClass="TopMoviesViewController" customModule="Farmdrop_Test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="s3g-1w-VR0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
