--- a/Farmdrop Test/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Farmdrop Test/Views/Storyboards/Base.lproj/Main.storyboard
@@ -14,7 +14,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Z9b-Bn-FfZ">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         </textAttributes>
@@ -42,7 +41,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="337" id="IlV-rM-JOC">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieOverviewCell" rowHeight="337" id="IlV-rM-JOC" customClass="MovieOverviewCell" customModule="Farmdrop_Test" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="337"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IlV-rM-JOC" id="bqt-Wz-4ed">
@@ -84,8 +83,16 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="movieOverview" destination="YEQ-n9-4fG" id="O6w-2a-hS4"/>
+                                            <outlet property="movieTitle" destination="KKM-D7-VOG" id="9BY-Qo-3we"/>
+                                            <outlet property="posterImageView" destination="Ltz-b4-84J" id="TO4-8Z-gY0"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="V4w-7V-UgI" id="Qcc-f2-4tk"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -98,6 +105,9 @@
                         <viewLayoutGuide key="safeArea" id="VJy-Im-Zhm"/>
                     </view>
                     <navigationItem key="navigationItem" title="Top Movies" id="nVN-LI-0Pj"/>
+                    <connections>
+                        <outlet property="tableView" destination="KX1-1Y-Ruz" id="F5W-Dz-KlS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mBJ-TB-F2x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
